k8s/tools/linkding/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: default
  labels:
    app: linkding
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - name: linkding
          image: sissbruecker/linkding:latest
          ports:
            - name: http
              containerPort: 9090
              protocol: TCP
          volumeMounts:
            - name: linkding-data
              mountPath: /etc/linkding/data
      volumes:
        - name: linkding-data
          persistentVolumeClaim:
            claimName: linkding-data
