k8s/tools/linkding/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: linkding-service
  namespace: default
  labels:
    app: linkding
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: linkding
